Add results and team endpoints
