# swagger/v1/swagger.yaml
@@ -39,7 +39,7 @@ paths:
     parameters:
     - name: id
       in: path
-      description: id
+      description: League id
       required: true
       schema:
         type: string
@@ -63,6 +63,36 @@ paths:
             application/json:
               schema:
                 "$ref": "#/components/schemas/error_not_found"
+  "/api/leagues/{league_id}/results":
+    parameters:
+    - name: league_id
+      in: path
+      description: League id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: list league results
+      tags:
+      - Results
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      "$ref": "#/components/schemas/result"
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_not_found"
   "/api/seasons":
     get:
       summary: list seasons
@@ -80,6 +110,34 @@ paths:
                     type: array
                     items:
                       "$ref": "#/components/schemas/season"
+  "/api/teams/{id}":
+    parameters:
+    - name: id
+      in: path
+      description: Team id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show team
+      tags:
+      - Teams
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    "$ref": "#/components/schemas/team"
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/error_not_found"
   "/api/tournaments":
     get:
       summary: list tournaments
@@ -117,9 +175,11 @@ components:
               message:
                 type: string
                 example: Resource not found
+            required:
+            - key
+            - message
       required:
-      - key
-      - message
+      - errors
     league:
       type: object
       properties:
@@ -182,7 +242,7 @@ components:
           example: 2023
         status:
           type: string
-          example: active
+          example: integer
           description: 'Available values: initial, active, archived'
         teams_count:
           type: integer
@@ -230,6 +290,104 @@ components:
       required:
       - id
       - name
+    result:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        best_lineup:
+          type: string
+          example: '99.5'
+        draws:
+          type: integer
+          example: 3
+        form:
+          type: array
+          items:
+            type: string
+            example: W
+          example:
+          - W
+          - D
+          - L
+        goals_difference:
+          type: integer
+          example: 13
+        history:
+          type: array
+          items:
+            type: object
+            properties:
+              pos:
+                type: integer
+                example: 5
+                description: position
+              p:
+                type: integer
+                example: 33
+                description: points
+              sg:
+                type: integer
+                example: 33
+                description: scored_goals
+              mg:
+                type: integer
+                example: 33
+                description: missed_goals
+              w:
+                type: integer
+                example: 33
+                description: wins
+              d:
+                type: integer
+                example: 33
+                description: draws
+              l:
+                type: integer
+                example: 33
+                description: loses
+              ts:
+                type: string
+                example: '599.5'
+                description: total_score
+          nullable: true
+        league_id:
+          type: integer
+          example: 123
+        loses:
+          type: integer
+          example: 3
+        matches_played:
+          type: integer
+          example: 9
+        missed_goals:
+          type: integer
+          example: 19
+        next_opponent_id:
+          type: integer
+          example: 123
+          nullable: true
+          description: Team id of next opponent
+        points:
+          type: integer
+          example: 43
+        scored_goals:
+          type: integer
+          example: 53
+        team_id:
+          type: integer
+          example: 153
+        total_score:
+          type: string
+          example: '899.5'
+        wins:
+          type: integer
+          example: 3
+      required:
+      - id
+      - league_id
+      - team_id
     season:
       type: object
       properties:
@@ -246,6 +404,43 @@ components:
       - id
       - end_year
       - start_year
+    team:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 123
+        budget:
+          type: integer
+          example: 260
+        code:
+          type: string
+          example: ROS
+        human_name:
+          type: string
+          example: Rossoneri
+        league_id:
+          type: integer
+          example: 123
+          nullable: true
+        logo_path:
+          type: string
+          example: "/assets/path/team.png"
+        players:
+          type: array
+          items:
+            type: integer
+            example: 13
+          example:
+          - '13'
+          - '4323'
+          - '954'
+        user_id:
+          type: integer
+          example: 123
+          nullable: true
+      required:
+      - id
     tournament:
       type: object
       properties:
